fix(ui5-table): focus visiblity (compat) (#11118)
Fixes: #11112

--- a/packages/compat/src/themes/TableGroupRow.css
+++ b/packages/compat/src/themes/TableGroupRow.css
@@ -21,7 +21,7 @@
 
 .ui5-table-group-row-root:focus {
 	outline: var(--ui5_table_row_outline_width) var(--sapContent_FocusStyle) var(--sapContent_FocusColor);
-	outline-offset: var(--ui5_table_focus_outline_offset);
+	outline-offset: calc(-1 * var(--ui5_table_focus_outline_offset));
 }
 
 td {
